# cookiecutter-templates

./: .gitignore  README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  Cargo.toml  LICENSE.md  README.md  environment.yml  requirements.txt
{{cookiecutter.project_slug}}/logs/: {{cookiecutter.project_name}}.ipynb
{{cookiecutter.project_slug}}/notebooks/: 00_main.ipynb
{{cookiecutter.project_slug}}/reports/: 00_main.ipynb
{{cookiecutter.project_slug}}/resources/data/: 00_main_log.ipynb
{{cookiecutter.project_slug}}/src/: main.py  main.rs
{{cookiecutter.project_slug}}/src/app/web/: index.html
{{cookiecutter.project_slug}}/src/components/: app.py  editor.py  mod.rs
{{cookiecutter.project_slug}}/src/config/: globals.py  globals.rs
{{cookiecutter.project_slug}}/src/util/: mod.rs
